--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "animated-backgrounds": "^2.0.0",
+    "cors": "^2.8.5",
     "daisyui": "^5.3.10",
+    "express": "^5.1.0",
     "firebase": "^12.4.0",
+    "firebase-admin": "^13.5.0",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.548.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "react-router-hash-link": "^2.4.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
