--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,8 +1,9 @@
 fastapi
 uvicorn
-google-generativeai
-requests
-pydantic
 python-multipart
+pydantic
+google-generativeai
 PyPDF2
 python-docx
+python-dotenv
+packaging
